Fix overflow issue

--- a/src/Container/EventGallery.css
+++ b/src/Container/EventGallery.css
@@ -2,7 +2,6 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
   align-items: center;
 }
 
@@ -17,9 +16,7 @@
   flex-direction: column;
   height: 1200px;
   align-items: center;
-  overflow: scroll;
-  -webkit-overflow-scrolling: touch;
-  justify-content: center;
+  overflow:scroll
 }
 
 .search-box-container {
